<resources>
    <string name="app_name">Deadlineapp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="predmet_title">Какой предмет?</string>
    <string name="deadline_descr">Что нужно сделать?</string>
    <string name="importanceText">Важность</string>
    <string name="importanceLow">Неважно</string>
    <string name="importanceMedium">Средне</string>
    <string name="importanceHigh">Важно</string>
    <string name="pinned">Закрепить</string>
    <string name="deadline_time">До какого времени?</string>
    <string name="deadline_date">До какого числа?</string>
    <string name="channel_name">Channel1</string>
    <string name="channel_description">Deadline</string>
    <string name="add">Добавить</string>
    <string name="title">Дедлайны</string>
    <string name="pressBack">Нажмите НАЗАД еще раз, чтобы выйти</string>
    <string name="updateButton">Обновить</string>
    <string name="emptyList">Дедлайнов нет :(</string>
    <string name="predmetError">Заполните описание!</string>
    <string name="deleteDeadline">Дедлайн удален</string>
    <string name="cancel">Отменить</string>
    <string name="pinnedImage">Иконка закрепления</string>
    <string name="clockImage">Иконка часов</string>
    <string name="predmetSample">ПРЕДМЕТ ПРЕДМЕТ ПРЕДМЕТ ПРЕДМЕТ ПРЕДМЕТ ПРЕДМЕТ ПРЕДМЕТ ПРЕДМЕТ</string>
    <string name="zadSample">Задание Задание Задание Задание Задание Задание Задание Задание Задание Задание Задание Задание Задание Задание</string>
    <string name="dataSample">Пн, 01.01.2020, 00:00</string>
</resources>
