<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:padding="10dp"
    android:theme="@style/Theme.MaterialComponents.DayNight"
    android:background="@drawable/shape_bottom_sheet">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/imgPr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_library_books_black_24dp"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPredmet"
            android:inputType="textCapCharacters"
            android:hint="@string/predmet_title"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:layout_marginStart="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">
        <ImageView
            android:id="@+id/imgDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sort_black_24dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editDescription"
            android:inputType="text"
            android:hint="@string/deadline_descr"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:layout_marginStart="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp">
        <ImageView
            android:id="@+id/imgCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_date_range_24"/>
        <EditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:ems="10"
            android:hint="@string/deadline_date"
            android:focusable="false"
            android:inputType="date"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:layout_marginStart="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp">
        <ImageView
            android:id="@+id/imgClk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_access_time_24"
            android:layout_gravity="center" />
        <EditText
            android:id="@+id/editTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/deadline_time"
            android:focusable="false"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:layout_marginStart="15dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chipGr"
        app:singleSelection="true"
        app:checkedChip="@id/chipLow">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipLow"
            style="@style/ChipStyle"
            android:layout_height="wrap_content"
            android:text="@string/importanceLow"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMedium"
            style="@style/ChipStyle"
            android:layout_height="wrap_content"
            android:text="@string/importanceMedium"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipHigh"
            style="@style/ChipStyle"
            android:layout_height="wrap_content"
            android:text="@string/importanceHigh"/>
    </com.google.android.material.chip.ChipGroup>

        <ImageView
            android:id="@+id/imgPinned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_push_unpin_24px"
            android:adjustViewBounds="true"
            android:maxWidth="26dp"
            android:maxHeight="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:contentDescription="unpinned"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btadd"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/add"
        app:cornerRadius="7dp"/>
</LinearLayout>