<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:orientation="vertical"
    app:contentPadding="0dp"
    android:layout_marginBottom="1dp"
    app:cardCornerRadius="4dp"
    android:elevation="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal"
        android:background="?android:selectableItemBackground">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/rbComp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvPred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/predmetSample"
                android:maxLines="1"
                android:textColor="@color/predmetcolor"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:ellipsize="end"/>
            <TextView
                android:id="@+id/tvZad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:text="@string/zadSample"
                android:layout_below="@+id/tvPred"
                android:textColor="@color/textColorPrimary"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:layout_marginStart="5dp"
                android:ellipsize="end"/>
            <ImageView
                android:id="@+id/imgPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_push_pin_24px"
                android:visibility="invisible"
                android:adjustViewBounds="true"
                android:maxWidth="20dp"
                android:maxHeight="20dp"
                android:layout_below="@id/tvZad"
                android:contentDescription="@string/pinnedImage" />
            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dataSample"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif-medium"
                android:textSize="13sp"
                android:layout_below="@id/tvZad"
                android:layout_marginTop="5dp"
                android:textColor="@color/textColorSecondary"/>
            <ImageView
                android:id="@+id/imgClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_access_alarm_black_24dp"
                android:visibility="visible"
                android:adjustViewBounds="true"
                android:maxWidth="20dp"
                android:maxHeight="20dp"
                android:layout_toStartOf="@id/tvDateTime"
                android:layout_below="@id/tvZad"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/clockImage" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>